Added steps & configurations for running the app